[project]
name = "madhu_crewai"
version = "0.1.0"
description = "madhu_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
madhu_crewai = "madhu_crewai.main:run"
run_crew = "madhu_crewai.main:run"
train = "madhu_crewai.main:train"
replay = "madhu_crewai.main:replay"
test = "madhu_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
